--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
+os: linux
+dist: xenial
 language: python
-sudo: false
+
 python:
   - "3.9"
-
+before_install:
+  - python --version
+  - pip install -U pip
 install:
   - pip install -r requirements.txt
 
