--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,5 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - python -m unittest discover -s test
+  - coverage run -m unittest discover test
+  - bash codacy_coverage.sh
