--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ install:
 
 script:
   - coverage run -m unittest discover test
-  - bash codacy_coverage.sh
+  - coverage xml -o report.xml
+  - bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r report.xml
